--- a/project_resources/user_centered_design_process/readme.me
+++ b/project_resources/user_centered_design_process/readme.me
@@ -21,4 +21,11 @@ The Vision Canvas articulated exactly what type of users we would target with th
 <insert persona screen caps>
 
 Co-development: 
-Our product manager, UX designer and developer collaborated in real-time via Skype, Webex, phone and Facetime to deliver elements of a working product as quickly as possible. We created little documentation, instead using hand-drawings, balsamiq wireframes, and real-time development to execute faster. Our developer used an existing framework to stand up the product quickly--it looked great "out of the box" and more importantly, it enabled us to being user testing immediately, as well as to identify UI elements that would need to be defined via a style guide. Our UX team could constantly test and ID enhancements, and our visual designer was able to work in parallel on our style guide.
+Our product manager, UX designer and developer collaborated in real-time via Skype, Webex, phone and Facetime to deliver elements of a working product as quickly as possible. We created little documentation, instead using hand-drawings, balsamiq wireframes, and real-time development to execute faster. Our developer used an existing framework to stand up the product quickly--it looked great "out of the box" and more importantly, it enabled us to being user testing immediately, as well as to identify UI elements that would need to be defined via a style guide. 
+
+<insert drawing > wireframes > screen cap image>
+
+Testing:
+Our core team tested features constantly, but we also put our core group of users to work every day testing the latest release. An email was sent to this group every morning outlining what had changed and asking them to test. Later in the day, the user group gathered with the core team to review and prioritize feedback. High priority items were flagged on the project board as "MVP" and remaining items were added to the backlog for later consideration. 
+
+<screen cap of daily user feedback and project board showing feedback translated in to a story>
