--- a/project_resources/user_centered_design_process/readme.me
+++ b/project_resources/user_centered_design_process/readme.me
@@ -1,15 +1,13 @@
 Discovery:
-  Team decided that we wanted to build something to serve the public, something that would be meaningful and understandable by an average citizen. Strawman user scenarios were written.
+  After some discussion about EPA's strategic plans and opportunities on the web to further the agency's mission, the project team decided that we wanted to build something to serve the public--something that would fill a gap in EPA's service to citizens, be useful and be understandable by an average citizen. We documented our assumptions, hypothesis and a few key tasks. We then conducted several user interviews to validate our assumptions about the value of building a tool that could serve up the type of data we had identified. 
+
   
-  <insert screen cap of user scenarios>
+  <insert assumptions_user tasks_screencap>
   
-  Several technical team members and subject-matter experts with historical knowledge of EPA data reviewed available data to understand its characteristics, context and presentation against user scenarios. The team pulled together an initial list of data for consideration:
+In parallel to user interviews,  several technical team members and subject-matter experts with historical knowledge of EPA data reviewed available data to understand its characteristics, context and presentation against user scenarios. The team pulled together an initial list of data for consideration:
   
-  <insert screen cap of justin's email>
+  <insert databrainstorm jpg>
   
-  Our UX team also conducted several user interviews to validate our assumptions about the value of building a tool that could serve up the type of data we had identified. 
-  
-  <insert screen cap of raw interview notes>
   
 Visioning: 
 The team began by developing a "Vision Canvas," a single document meant to articulate the "elevator pitch" for the product: Who uses it? What is its value? What problems is it solving? How will we measure success?
